Bug 425152 - No new brush strokes appear on Paint Layer when a Wet Brush is selected and Alpha Lock is turned on
Summary: No new brush strokes appear on Paint Layer when a Wet Brush is selected and A...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2020-08-09 02:48 UTC by Anya
Modified: 2020-08-14 10:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anya 2020-08-09 02:48:05 UTC
Version 4.3.1-alpha (git aa84881)

SUMMARY
When trying to use wet brushes on a Paint Layer with alpha-lock toggled on, no new strokes appear on top of pre-existing strokes, even if brush is set at 100% opacity. The Undo History shows that a "freehand brush stroke" occurred, but no change is seen on the paint layer. This problem only occurs when Alpha Locked is turned ON. When it is OFF, the Wet Brushes work normally.

Other brushes do NOT have this problem from what I can see, only wet brushes (Wet bristles, Wet circle, Wet knife, Wet paint, etc.)

STEPS TO REPRODUCE
1. Add a new Paint Layer with Alpha Lock property turned off (Alpha Locked: No).
2. Select one of the wet brushes like "Wet Paint" at 100% opacity, select a first color, then make strokes on the canvas.
3. On the same Paint Layer, turn the Alpha Lock property on (Alpha Locked: Yes)
4. Using the same wet brush and a different color, add new brush strokes on top of existing brush strokes made from Step 2 on the canvas.

OBSERVED RESULT
Brush strokes made when Alpha Lock is turned ON in the second color from Step 4 do NOT appear on top of strokes that were made with the first color from Step 2 using the same Wet Brush.
 
When the Alpha Lock is turned OFF and you try to draw on the same layer, strokes that you make after turning off the lock can be seen.

EXPECTED RESULT
New brush strokes using Wet Brushes in the selected second color should appear on top of the brush strokes made with the first color regardless of whether Alpha Lock is toggled on OR off. 

SOFTWARE/OS VERSIONS
Windows: Version 4.3.1-alpha (git aa84881)
Qt Version: 5.12.9
Surface Pro 3, Windows 10
Comment 1 Ahab Greybeard 2020-08-11 09:34:24 UTC
I can confirm this with the 4.3.1-alpha (git 040ab1a) appimage.
It does not happen with 4.3.0

It looks like it happens for all the Clour Smudge Engine brush presets, e.g the Blender brushes as well.
Comment 2 Dmitry Kazakov 2020-08-14 10:15:46 UTC
Git commit 099e27d47aeee930169266a480bc393012636ec6 by Dmitry Kazakov.
Committed on 14/08/2020 at 10:15.
Pushed by dkazakov into branch 'krita/4.3'.

Fix painting with colorsmudge brush on a alpha-locked layer

That was a regression from my commit 7956d4e1457 in early June.
The cropping algorithm didn't take into account the possible offset
between src and dst rects.

M  +2    -1    libs/image/kis_painter.cc

https://invent.kde.org/graphics/krita/commit/099e27d47aeee930169266a480bc393012636ec6
Comment 3 Dmitry Kazakov 2020-08-14 10:16:03 UTC
Git commit 9d84459060c99a8cd5b7338bc82e787aa4b88ecb by Dmitry Kazakov.
Committed on 14/08/2020 at 10:15.
Pushed by dkazakov into branch 'master'.

Fix painting with colorsmudge brush on a alpha-locked layer

That was a regression from my commit 7956d4e1457 in early June.
The cropping algorithm didn't take into account the possible offset
between src and dst rects.

M  +2    -1    libs/image/kis_painter.cc

https://invent.kde.org/graphics/krita/commit/9d84459060c99a8cd5b7338bc82e787aa4b88ecb