Fix painting with colorsmudge brush on a alpha-locked layer

That was a regression from my commit 7956d4e1457 in early June.
The cropping algorithm didn't take into account the possible offset
between src and dst rects.

BUG:425152